--- a/menu.html
+++ b/menu.html
@@ -17,27 +17,29 @@
 
 </head>
 <body>
-<div class="container">
-  <br>
-  <h1>Player Management System</h1>
-  <br>
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark" >
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="new_player.php">NEW PLAYER</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="player_list.php">PLAYER</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="transfer.php">TRANSFER</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="transfer_history.php">TRANSFER HISTORY</a>
-      </li>
-    </ul>
-  </nav>
-  </div>
-
+  <div class="container">
+    <br>
+    <h1>Player Management System</h1>
+    <br>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark" >
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="player_list.php">PLAYER</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="team_list.php">TEAM</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="transfer.php">TRANSFER</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="transfer_history.php">TRANSFER HISTORY</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="logout.php">Logout</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
   </body>
   </html>
